<resources>
    <string name="app_name">Chain</string>
    <string name="app_description">Decentralized Messaging Platform</string>
</resources>